--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
         <title>Shine & Smile</title>
 
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon_io/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon_io/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-16x16.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./assets/favicon_io/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./assets/favicon_io/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./assets/favicon_io/favicon-16x16.png"
+        />
         <link rel="manifest" href="./assets/favicon_io/site.webmanifest" />
 
         <!-- Sora Font from Google Fonts -->
@@ -58,5 +72,40 @@
                 </nav>
             </div>
         </header>
+        <main>
+            <section class="hero-section">
+                <div class="content">
+                    <div class="hero-wrapper">
+                        <div class="hero-text">
+                            <h1 class="title">
+                                Exceptional dental care for all ages.
+                            </h1>
+                            <p class="desc">
+                                Exceptional dental care for all ages. Your great
+                                smile begins with a great dentist.
+                            </p>
+                            <div class="cta-group">
+                                <div class="btn hero-button">Book Online</div>
+                                <p class="call-number">
+                                    or call (123) 456-7890
+                                </p>
+                            </div>
+                        </div>
+                        <div class="images-container">
+                            <img
+                                src="./assets/img/hero-01.jpg"
+                                alt="Shine & Smile"
+                                class="large-img"
+                            />
+                            <img
+                                src="./assets/img/hero-02.jpg"
+                                alt="Shine & Smile"
+                                class="small-img"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
