--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Styles CSS -->
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
-    <body>
+    <body style="margin-bottom: 2000px">
         <header class="fixed-header">
             <!-- Navigation -->
             <div class="content">
@@ -194,6 +194,59 @@
                                 </div>
                             </div>
                             <div class="btn service-button">All Services</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- More -->
+            <section class="more-section">
+                <div class="content">
+                    <div class="main-title">
+                        <h2 class="title">How it works</h2>
+                        <p class="desc">
+                            Exceptional dental care for all ages. Your great
+                            smile begins with a great dentist.
+                        </p>
+                    </div>
+                    <div class="more-group">
+                        <div class="more-item">
+                            <img
+                                src="./assets/icons/search-more.svg"
+                                alt="Search icon"
+                                class="icon-item"
+                            />
+                            <h3 class="item-title">Search doctor</h3>
+                            <p class="item-desc">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
+                            <a href="" class="item-cta">Learn More</a>
+                        </div>
+                        <div class="more-item">
+                            <img
+                                src="./assets/icons/find-user-more.svg"
+                                alt="Find user icon"
+                                class="icon-item"
+                            />
+                            <h3 class="item-title">Find best doctor</h3>
+                            <p class="item-desc">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
+                            <a href="" class="item-cta">Learn More</a>
+                        </div>
+                        <div class="more-item">
+                            <img
+                                src="./assets/icons/first-aid-kit-more.svg"
+                                alt="First aid kit icon"
+                                class="icon-item"
+                            />
+                            <h3 class="item-title">Get treatment</h3>
+                            <p class="item-desc">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
+                            <a href="" class="item-cta">Learn More</a>
                         </div>
                     </div>
                 </div>
