--- a/index.html
+++ b/index.html
@@ -251,6 +251,38 @@
                     </div>
                 </div>
             </section>
+            <!-- Feature -->
+            <section class="feature">
+                <div class="content">
+                    <div class="feature-wrapper">
+                        <div class="image-group">
+                            <img
+                                src="./assets/img/feature-01.jpg"
+                                alt="Feature large image"
+                                class="large-image"
+                            />
+                            <img
+                                src="./assets/img/feature-02.jpg"
+                                alt="Feature small image"
+                                class="small-image"
+                            />
+                        </div>
+                        <div class="hero-text content-group">
+                            <h1 class="title">
+                                Take back your smile with shine.
+                            </h1>
+                            <p class="desc">
+                                If you’re missing multiple teeth due to decay,
+                                injury, or the natural aging process, dentures
+                                might be the perfect solution.
+                            </p>
+                            <div class="cta-group">
+                                <div class="btn feature-button">Learn More</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
