--- a/index.html
+++ b/index.html
@@ -283,6 +283,107 @@
                     </div>
                 </div>
             </section>
+            <!-- Member -->
+            <section class="member">
+                <div class="content">
+                    <div class="title-wrapper">
+                        <h1 class="title">Our virtual dentist</h1>
+                        <div class="btn member-button">Meet our dentist</div>
+                    </div>
+                    <div class="list-member">
+                        <div class="list-item">
+                            <div class="image-item">
+                                <img
+                                    src="./assets/img/dentist-member-01.svg"
+                                    alt="Dentist 1st"
+                                />
+                            </div>
+                            <div class="info-item">
+                                <p class="name">Dr. Essence Page</p>
+                                <p class="desc">
+                                    DDS, California - Linda University
+                                </p>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="image-item">
+                                <img
+                                    src="./assets/img/dentist-member-02.svg"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="info-item">
+                                <p class="name">Dr. Essence Page</p>
+                                <p class="desc">
+                                    DDS, California - Linda University
+                                </p>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="image-item">
+                                <img
+                                    src="./assets/img/dentist-member-03.svg"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="info-item">
+                                <p class="name">Dr. Essence Page</p>
+                                <p class="desc">
+                                    DDS, California - Linda University
+                                </p>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="image-item">
+                                <img
+                                    src="./assets/img/dentist-member-04.svg"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="info-item">
+                                <p class="name">Dr. Essence Page</p>
+                                <p class="desc">
+                                    DDS, California - Linda University
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-wrapper">
+                        <div class="left-button">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="6"
+                                height="11"
+                                viewBox="0 0 6 11"
+                                fill="none"
+                            >
+                                <path
+                                    d="M5.5 0.5L0.5 5.5L5.5 10.5"
+                                    stroke="#575F66"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </div>
+                        <div class="right-button">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="6"
+                                height="11"
+                                viewBox="0 0 6 11"
+                                fill="none"
+                            >
+                                <path
+                                    d="M0.5 0.5L5.5 5.5L0.5 10.5"
+                                    stroke="#10375C"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
