--- a/index.html
+++ b/index.html
@@ -384,6 +384,41 @@
                     </div>
                 </div>
             </section>
+            <!-- Application -->
+            <section class="app">
+                <div class="content">
+                    <div class="mobile-wrapper">
+                        <img
+                            src="./assets/img/phone-app.svg"
+                            alt="mobile-app"
+                            class="mobile-image"
+                        />
+
+                        <div class="hero-text content-group">
+                            <h1 class="title">
+                                Take back your smile with dentures
+                            </h1>
+                            <p class="desc">
+                                If you’re missing multiple teeth due to decay,
+                                injury, or the natural aging process, dentures
+                                might be the perfect solution.
+                            </p>
+                            <div class="cta-download">
+                                <img
+                                    src="./assets/icons/google-play.svg"
+                                    alt="Google Play Store"
+                                    class="google-play"
+                                />
+                                <img
+                                    src="./assets/icons/app-store.svg"
+                                    alt="Apple App Store"
+                                    class="app-store"
+                                />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
