--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap"
             rel="stylesheet"
         />
+        <!-- Inter Font from Google Fonts -->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
+            rel="stylesheet"
+        />
 
         <!-- Reset CSS -->
         <link rel="stylesheet" href="./assets/css/reset.css" />
@@ -414,6 +419,94 @@
                                     alt="Apple App Store"
                                     class="app-store"
                                 />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- News -->
+            <section class="news">
+                <div class="content">
+                    <div class="news-wrapper">
+                        <div class="news-cta">
+                            <h3 class="title">Read Latest News & Events.</h3>
+                            <a href="#!" class="desc">Read All Blog</a>
+                            <div class="control-wrapper">
+                                <div class="left-button">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        width="6"
+                                        height="11"
+                                        viewBox="0 0 6 11"
+                                        fill="none"
+                                    >
+                                        <path
+                                            d="M5.5 0.5L0.5 5.5L5.5 10.5"
+                                            stroke="#575F66"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </div>
+                                <div class="right-button">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        width="6"
+                                        height="11"
+                                        viewBox="0 0 6 11"
+                                        fill="none"
+                                    >
+                                        <path
+                                            d="M0.5 0.5L5.5 5.5L0.5 10.5"
+                                            stroke="#10375C"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="news-list">
+                            <div class="news-item">
+                                <img
+                                    src="./assets/img/news-01.jpg"
+                                    alt="medical-care"
+                                    class="news-image"
+                                />
+                                <div class="blog-info">
+                                    <p class="title">
+                                        Key Considerations for Regulatory
+                                        Compliant.
+                                    </p>
+                                    <p class="desc">
+                                        It’s easy to think about medical care
+                                        from a narrow perspective. You go to the
+                                        hospital.
+                                    </p>
+                                    <a href="" class="item-cta news-link"
+                                        >Learn More</a
+                                    >
+                                </div>
+                            </div>
+                            <div class="news-item">
+                                <img
+                                    src="./assets/img/news-02.jpg"
+                                    alt="dental-care"
+                                    class="news-image"
+                                />
+                                <div class="blog-info">
+                                    <p class="title">
+                                        What Is Population Health Management?
+                                    </p>
+                                    <p class="desc">
+                                        It’s easy to think about medical care
+                                        from a narrow perspective. You go to the
+                                        hospital.
+                                    </p>
+                                    <a href="" class="item-cta news-link"
+                                        >Learn More</a
+                                    >
+                                </div>
                             </div>
                         </div>
                     </div>
