--- a/index.html
+++ b/index.html
@@ -512,6 +512,17 @@
                     </div>
                 </div>
             </section>
-        </main>
+            <!-- Welcome -->
+            <section class="welcome">
+                <div class="content">
+                    <div class="welcome-wrapper">
+                        <h1 class="title">Always welcoming new patients</h1>
+                        <div class="below-line"></div>
+                        <p class="desc">Take control of your dental health and get the personalized care you deserve. Call (541) 772-8846 to  schedule
+                        </p>
+                        <div class="btn welcome-button">Appointment</div>
+                    </div>
+                </div>
+            </section>
     </body>
 </html>
