--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -54,7 +54,7 @@
             <div class="content">
                 <nav class="navbar-section">
                     <div class="logo">
-                        <a href="#!index.html">
+                        <a href="#!">
                             <img
                                 src="./assets/img/logo.svg"
                                 alt="Shine & Smile"
@@ -84,58 +84,60 @@
         </header>
         <main>
             <!-- Hero -->
-            <section class="hero-section">
+            <section class="hero">
                 <div class="content">
-                    <div class="hero-wrapper">
-                        <div class="hero-text">
-                            <h1 class="title">
+                    <div class="hero__container">
+                        <div class="hero__content">
+                            <h1 class="hero__title">
                                 Exceptional dental care for all ages.
                             </h1>
-                            <p class="desc">
+                            <p class="hero__subtitle">
                                 Exceptional dental care for all ages. Your great
                                 smile begins with a great dentist.
                             </p>
-                            <div class="cta-group">
-                                <div class="btn hero-button">Book Online</div>
-                                <p class="call-number">
+                            <div class="hero__actions">
+                                <button class="btn btn--primary">
+                                    Book Online
+                                </button>
+                                <p class="hero__phone">
                                     or call (123) 456-7890
                                 </p>
                             </div>
                         </div>
-                        <div class="images-container">
+                        <div class="hero__images">
                             <img
                                 src="./assets/img/hero-01.jpg"
                                 alt="Shine & Smile"
-                                class="large-img"
+                                class="hero__image hero__image--large"
                             />
                             <img
                                 src="./assets/img/hero-02.jpg"
                                 alt="Shine & Smile"
-                                class="small-img"
+                                class="hero__image hero__image--small"
                             />
                         </div>
                     </div>
                 </div>
             </section>
             <!-- Service -->
-            <section class="service-section">
+            <section class="service">
                 <div class="content">
-                    <div class="main-title">
-                        <h2 class="title">Our services</h2>
-                        <p class="desc">
+                    <div class="service__header">
+                        <h2 class="service__title">Our services</h2>
+                        <p class="service__desc">
                             Exceptional dental care for all ages. Your great
                             smile begins with a great dentist.
                         </p>
                     </div>
-                    <div class="service-wrapper">
+                    <div class="service__body">
                         <img
                             src="./assets/img/service.jpg"
                             alt="Shine & Smile"
-                            class="service-img"
+                            class="service__image"
                         />
-                        <div class="service-content">
-                            <div class="menu-item">
-                                <div class="tooth-icon">
+                        <div class="service__list">
+                            <div class="service__item">
+                                <div class="service__icon">
                                     <svg
                                         xmlns="http://www.w3.org/2000/svg"
                                         width="22"
@@ -149,16 +151,16 @@
                                         />
                                     </svg>
                                 </div>
-                                <div class="menu-info">
-                                    <p class="title">Oral Surgery</p>
-                                    <div class="desc">
+                                <div class="service__info">
+                                    <p class="service__name">Oral Surgery</p>
+                                    <div class="service__text">
                                         Everything you expect and then some.
                                         Cleanings, fillings, and x-rays.
                                     </div>
                                 </div>
                             </div>
-                            <div class="menu-item">
-                                <div class="tooth-icon">
+                            <div class="service__item">
+                                <div class="service__icon">
                                     <svg
                                         xmlns="http://www.w3.org/2000/svg"
                                         width="22"
@@ -172,16 +174,18 @@
                                         />
                                     </svg>
                                 </div>
-                                <div class="menu-info">
-                                    <p class="title">Wisdom Teeth Removal</p>
-                                    <div class="desc">
+                                <div class="service__info">
+                                    <p class="service__name">
+                                        Wisdom Teeth Removal
+                                    </p>
+                                    <div class="service__text">
                                         Everything you expect and then some.
                                         Cleanings, fillings, and x-rays.
                                     </div>
                                 </div>
                             </div>
-                            <div class="menu-item">
-                                <div class="tooth-icon">
+                            <div class="service__item">
+                                <div class="service__icon">
                                     <svg
                                         xmlns="http://www.w3.org/2000/svg"
                                         width="22"
@@ -195,68 +199,72 @@
                                         />
                                     </svg>
                                 </div>
-                                <div class="menu-info">
-                                    <p class="title">Preventative Dentistry</p>
-                                    <div class="desc">
+                                <div class="service__info">
+                                    <p class="service__name">
+                                        Preventative Dentistry
+                                    </p>
+                                    <div class="service__text">
                                         Everything you expect and then some.
                                         Cleanings, fillings, and x-rays.
                                     </div>
                                 </div>
                             </div>
-                            <div class="btn service-button">All Services</div>
+                            <button class="btn btn--secondary service__button">
+                                All Services
+                            </button>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- More -->
-            <section class="more-section">
+            <section class="process">
                 <div class="content">
-                    <div class="main-title">
-                        <h2 class="title">How it works</h2>
-                        <p class="desc">
+                    <div class="process__header">
+                        <h2 class="process__title">How it works</h2>
+                        <p class="process__desc">
                             Exceptional dental care for all ages. Your great
                             smile begins with a great dentist.
                         </p>
                     </div>
-                    <div class="more-group">
-                        <div class="more-item">
+                    <div class="process__list">
+                        <div class="process__item">
                             <img
                                 src="./assets/icons/search-more.svg"
                                 alt="Search icon"
-                                class="icon-item"
+                                class="process__icon"
                             />
-                            <h3 class="item-title">Search doctor</h3>
-                            <p class="item-desc">
+                            <h3 class="process__name">Search doctor</h3>
+                            <p class="process__text">
                                 Search a doctor by education, qualifications or
                                 experience-contact for inquiry.
                             </p>
-                            <a href="" class="item-cta">Learn More</a>
+                            <a href="" class="process__link">Learn More</a>
                         </div>
-                        <div class="more-item">
+                        <div class="process__item">
                             <img
                                 src="./assets/icons/find-user-more.svg"
                                 alt="Find user icon"
-                                class="icon-item"
+                                class="process__icon"
                             />
-                            <h3 class="item-title">Find best doctor</h3>
-                            <p class="item-desc">
+                            <h3 class="process__name">Find best doctor</h3>
+                            <p class="process__text">
                                 Search a doctor by education, qualifications or
                                 experience-contact for inquiry.
                             </p>
-                            <a href="" class="item-cta">Learn More</a>
+                            <a href="" class="process__link">Learn More</a>
                         </div>
-                        <div class="more-item">
+                        <div class="process__item">
                             <img
                                 src="./assets/icons/first-aid-kit-more.svg"
                                 alt="First aid kit icon"
-                                class="icon-item"
+                                class="process__icon"
                             />
-                            <h3 class="item-title">Get treatment</h3>
-                            <p class="item-desc">
+                            <h3 class="process__name">Get treatment</h3>
+                            <p class="process__text">
                                 Search a doctor by education, qualifications or
                                 experience-contact for inquiry.
                             </p>
-                            <a href="" class="item-cta">Learn More</a>
+                            <a href="" class="process__link">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -264,30 +272,30 @@
             <!-- Feature -->
             <section class="feature">
                 <div class="content">
-                    <div class="feature-wrapper">
-                        <div class="image-group">
+                    <div class="feature__body">
+                        <div class="feature__images">
                             <img
                                 src="./assets/img/feature-01.jpg"
                                 alt="Feature large image"
-                                class="large-image"
+                                class="feature__image feature__image--large"
                             />
                             <img
                                 src="./assets/img/feature-02.jpg"
                                 alt="Feature small image"
-                                class="small-image"
+                                class="feature__image feature__image--small"
                             />
                         </div>
-                        <div class="hero-text content-group">
-                            <h1 class="title">
+                        <div class="feature__content">
+                            <h1 class="feature__title">
                                 Take back your smile with shine.
                             </h1>
-                            <p class="desc">
-                                If you’re missing multiple teeth due to decay,
+                            <p class="feature__text">
+                                If you're missing multiple teeth due to decay,
                                 injury, or the natural aging process, dentures
                                 might be the perfect solution.
                             </p>
-                            <div class="cta-group">
-                                <div class="btn feature-button">Learn More</div>
+                            <div class="feature__actions">
+                                <button class="btn btn--primary feature__button">Learn More</button>
                             </div>
                         </div>
                     </div>
@@ -319,7 +327,7 @@
                             <div class="image-item">
                                 <img
                                     src="./assets/img/dentist-member-02.svg"
-                                    alt=""
+                                    alt="Dentist 2nd"
                                 />
                             </div>
                             <div class="info-item">
@@ -333,7 +341,7 @@
                             <div class="image-item">
                                 <img
                                     src="./assets/img/dentist-member-03.svg"
-                                    alt=""
+                                    alt="Dentist 3rd"
                                 />
                             </div>
                             <div class="info-item">
@@ -347,7 +355,7 @@
                             <div class="image-item">
                                 <img
                                     src="./assets/img/dentist-member-04.svg"
-                                    alt=""
+                                    alt="Dentist 4th"
                                 />
                             </div>
                             <div class="info-item">
@@ -525,7 +533,15 @@
                         <div class="below-line"></div>
                         <p class="desc">
                             Take control of your dental health and get the
-                            personalized care you deserve. Call (541) 772-8846
+                            personalized care you deserve. Call
+                            <a
+                                href="tel:+15417728846"
+                                style="
+                                    color: inherit;
+                                    text-decoration: underline;
+                                "
+                                >(541) 772-8846</a
+                            >
                             to schedule
                         </p>
                         <div class="btn welcome-button">Appointment</div>
@@ -548,7 +564,7 @@
                         </p>
                     </div>
                     <div class="footer-column">
-                        <h3 class="title">Support</h3>
+                        <h3 class="title">Company</h3>
                         <ul>
                             <li>
                                 <a href="#!" class="detail">Help center</a>
@@ -565,34 +581,30 @@
                                 <a href="#!" class="detail">Contact us</a>
                             </li>
                         </ul>
-                        <h3 class="title">Support</h3>
+                        <h3 class="title">Services</h3>
                         <ul>
                             <li>
-                                <a href="#!" class="detail">Help center</a>
+                                <a href="#!" class="detail">Dental Care</a>
                             </li>
                             <li>
-                                <a href="#!" class="detail"
-                                    >Account information</a
-                                >
+                                <a href="#!" class="detail">Orthodontics</a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer-column">
-                        <h3 class="title">Support</h3>
+                        <h3 class="title">Legal</h3>
                         <ul>
                             <li>
-                                <a href="#!" class="detail">Help center</a>
+                                <a href="#!" class="detail">Privacy Policy</a>
                             </li>
                             <li>
-                                <a href="#!" class="detail"
-                                    >Account information</a
-                                >
+                                <a href="#!" class="detail">Terms of Service</a>
                             </li>
                         </ul>
-                        <h3 class="title">Support</h3>
+                        <h3 class="title">Resources</h3>
                         <ul>
                             <li>
-                                <a href="#!" class="detail">Help center</a>
+                                <a href="#!" class="detail">Blog</a>
                             </li>
                         </ul>
                     </div>
@@ -647,16 +659,19 @@
                             Subscribe our newsletter for the latest update of
                             Dental care
                         </p>
-                        <div class="email-box">
+                        <form class="email-box" onsubmit="return false;">
                             <input
                                 class="input-email"
                                 type="email"
                                 name="email"
                                 id="email"
                                 placeholder="Enter your email..."
+                                required
                             />
-                            <div class="btn sub-button">Subscribe</div>
-                        </div>
+                            <div type="submit" class="btn sub-button">
+                                Subscribe
+                            </div>
+                        </form>
                     </div>
                 </div>
                 <div class="foot-line"></div>
