--- a/index.html
+++ b/index.html
@@ -556,6 +556,7 @@
                 </div>
             </section>
         </main>
+        <!-- Footer -->
         <footer class="footer">
             <div class="content">
                 <div class="footer__body">
